[package]
name = "joris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tungstenite = { version = "0.20.1", features = ["native-tls"] }
ureq = { version = "2.8.0", features = ["json"] }
url = "2.4.1"
